Fixed line spacing and padding of icons

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -120,6 +120,7 @@
 		text-decoration: none;
 		border-bottom: dotted 1px;
 		color: inherit;
+		cursor: pointer;
 	}
 
 		a:hover {
@@ -693,22 +694,20 @@
 				}
 
 		ul.icons {
-			cursor: default;
 			list-style: none;
 			padding-left: 0;
 		}
 
 			ul.icons li {
 				display: inline-block;
-				padding-left: 0;
+				padding: 0;
 			}
 
 				ul.icons li .icon {
 					display: inline-block;
-					width: 2.5em;
-					height: 2.5em;
-					line-height: 2.5em;
+					line-height: 1em;
 					text-align: center;
+					margin: 8px;
 				}
 
 					ul.icons li .icon:before {
